--- a/index.html
+++ b/index.html
@@ -349,11 +349,10 @@
     execute complex code with just a single command and is a self thought.
     I also have knowledge in Markup language such as HTML,
     cascade styles sheet(CSS) and
-    programming language such as python and with the python 
-    am based with flask as a flask developer  and also a software 
+    programming language such as python and with the python i build back-end using  Django and flask framework.Am a front-end  
     developer as well. Am ready to learn more and improve upon
     my skill pertaining to the I.T field. Am discipline, smart,
-    physically and mentaaly strong.Will be glad working with any 
+    physically and mentally strong.Will be glad working with any 
     company willing to use my skills in their company to solve 
     problems within the country and also if possible around the 
     world.
